added clustered weighting matrix using meatCL of the sandwich package
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/gmm@137 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/gmm4/vignettes/empir.bib
+++ b/pkg/gmm4/vignettes/empir.bib
@@ -201,6 +201,18 @@ year = {1987},
   url={http://www.jstatsoft.org/v16/i09/}
  }
 
+@article{berger-graham-zeileis17,
+ title = {Various Versatile Variances: An Object-Oriented Implementation of Clustered Covariances in {R}},
+ author = {Berger, S.  and Graham, N. and Zeileis, A.},
+ institution = {Working Papers in Economics and Statistics, Research  Platform Empirical and Experimental Economics, Universit\"at Innsbruck},
+ year = {2017},
+ type = {Working Paper},
+ number = {2017-12},
+ month = {July},
+url = {http://EconPapers.RePEc.org/RePEc:inn:wpaper:2017-12}
+}
+						    }
+
 @article{chausse10,
   title        = {Computing Generalized Method of Moments and Generalized Empirical Likelihood with R},
   author       = {Pierre Chauss{\'e}},
